ART: clean-up 959-invoke-polymorphic-accessors
Consistency fixes:
- argument ordering for assertEquals
- use of fail() rather than unreachable()

Coding style:
- Java style casts
- Use of {Float,Double}.valueOf() over new {Float,Double}().

Bug: 67744961
Test: art/test.py -r -t 959
Change-Id: I5d42c6b5da17ed8742a25aa54a801fef578e2b4c