@@ -49,20 +49,19 @@ public class Main {
     }
 
     public static class Tester {
-        public static void assertEquals(boolean actual, boolean expected)
-                throws AssertionError {
+        public static void assertEquals(boolean expected, boolean actual) {
             if (actual != expected) {
                 throw new AssertionError("Actual != Expected (" + actual + " != " + expected + ")");
             }
         }
 
-        public static void assertEquals(char actual, char expected) {
+        public static void assertEquals(char expected, char actual) {
             if (actual != expected) {
                 throw new AssertionError("Actual != Expected (" + actual + " != " + expected + ")");
             }
         }
 
-        public static void assertEquals(int actual, int expected) {
+        public static void assertEquals(int expected, int actual) {
             if (actual != expected) {
                 throw new AssertionError("Actual != Expected (" + actual + " != " + expected + ")");
             }
@@ -74,8 +73,8 @@ public class Main {
             }
         }
 
-        public static void unreachable() throws Throwable{
-            throw new Error("unreachable");
+        public static void fail() throws Throwable{
+            throw new Error("fail");
         }
     }
 
@@ -113,7 +112,7 @@ public class Main {
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void setByte(MethodHandle m, byte value, boolean expectFailure) throws Throwable {
@@ -126,16 +125,16 @@ public class Main {
             try {
                 final byte got;
                 if (v == null) {
-                    got = (byte)m.invokeExact();
+                    got = (byte) m.invokeExact();
                 } else {
-                    got = (byte)m.invokeExact(v);
+                    got = (byte) m.invokeExact(v);
                 }
                 assertTrue(got == value);
             }
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void getByte(MethodHandle m, byte value, boolean expectFailure) throws Throwable {
@@ -156,7 +155,7 @@ public class Main {
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void setChar(MethodHandle m, char value, boolean expectFailure) throws Throwable {
@@ -169,16 +168,16 @@ public class Main {
             try {
                 final char got;
                 if (v == null) {
-                    got = (char)m.invokeExact();
+                    got = (char) m.invokeExact();
                 } else {
-                    got = (char)m.invokeExact(v);
+                    got = (char) m.invokeExact(v);
                 }
                 assertTrue(got == value);
             }
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void getChar(MethodHandle m, char value, boolean expectFailure) throws Throwable {
@@ -199,7 +198,7 @@ public class Main {
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void setShort(MethodHandle m, short value, boolean expectFailure) throws Throwable {
@@ -210,13 +209,13 @@ public class Main {
                 throws Throwable {
             boolean exceptionThrown = false;
             try {
-                final short got = (v == null) ? (short)m.invokeExact() : (short)m.invokeExact(v);
+                final short got = (v == null) ? (short) m.invokeExact() : (short) m.invokeExact(v);
                 assertTrue(got == value);
             }
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void getShort(MethodHandle m, short value, boolean expectFailure) throws Throwable {
@@ -237,7 +236,7 @@ public class Main {
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void setInt(MethodHandle m, int value, boolean expectFailure) throws Throwable {
@@ -248,13 +247,13 @@ public class Main {
                 throws Throwable {
             boolean exceptionThrown = false;
             try {
-                final int got = (v == null) ? (int)m.invokeExact() : (int)m.invokeExact(v);
+                final int got = (v == null) ? (int) m.invokeExact() : (int) m.invokeExact(v);
                 assertTrue(got == value);
             }
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void getInt(MethodHandle m, int value, boolean expectFailure) throws Throwable {
@@ -275,7 +274,7 @@ public class Main {
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void setLong(MethodHandle m, long value, boolean expectFailure) throws Throwable {
@@ -286,13 +285,13 @@ public class Main {
                 throws Throwable {
             boolean exceptionThrown = false;
             try {
-                final long got = (v == null) ? (long)m.invokeExact() : (long)m.invokeExact(v);
+                final long got = (v == null) ? (long) m.invokeExact() : (long) m.invokeExact(v);
                 assertTrue(got == value);
             }
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void getLong(MethodHandle m, long value, boolean expectFailure) throws Throwable {
@@ -313,7 +312,7 @@ public class Main {
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void setFloat(MethodHandle m, float value, boolean expectFailure) throws Throwable {
@@ -324,13 +323,13 @@ public class Main {
                 throws Throwable {
             boolean exceptionThrown = false;
             try {
-                final float got = (v == null) ? (float)m.invokeExact() : (float)m.invokeExact(v);
+                final float got = (v == null) ? (float) m.invokeExact() : (float) m.invokeExact(v);
                 assertTrue(got == value);
             }
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void getFloat(MethodHandle m, float value, boolean expectFailure) throws Throwable {
@@ -351,7 +350,7 @@ public class Main {
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void setDouble(MethodHandle m, double value, boolean expectFailure)
@@ -363,13 +362,13 @@ public class Main {
                 throws Throwable {
             boolean exceptionThrown = false;
             try {
-                final double got = (v == null) ? (double)m.invokeExact() : (double)m.invokeExact(v);
+                final double got = (v == null) ? (double) m.invokeExact() : (double) m.invokeExact(v);
                 assertTrue(got == value);
             }
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void getDouble(MethodHandle m, double value, boolean expectFailure)
@@ -391,7 +390,7 @@ public class Main {
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void setString(MethodHandle m, String value, boolean expectFailure)
@@ -403,13 +402,13 @@ public class Main {
                 throws Throwable {
             boolean exceptionThrown = false;
             try {
-                final String got = (v == null) ? (String)m.invokeExact() : (String)m.invokeExact(v);
+                final String got = (v == null) ? (String) m.invokeExact() : (String) m.invokeExact(v);
                 assertTrue(got.equals(value));
             }
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void getString(MethodHandle m, String value, boolean expectFailure)
@@ -431,7 +430,7 @@ public class Main {
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void setBoolean(MethodHandle m, boolean value, boolean expectFailure)
@@ -444,13 +443,13 @@ public class Main {
             boolean exceptionThrown = false;
             try {
                 final boolean got =
-                        (v == null) ? (boolean)m.invokeExact() : (boolean)m.invokeExact(v);
+                        (v == null) ? (boolean) m.invokeExact() : (boolean) m.invokeExact(v);
                 assertTrue(got == value);
             }
             catch (WrongMethodTypeException e) {
                 exceptionThrown = true;
             }
-            assertEquals(exceptionThrown, expectFailure);
+            assertEquals(expectFailure, exceptionThrown);
         }
 
         static void getBoolean(MethodHandle m, boolean value, boolean expectFailure)
@@ -470,7 +469,7 @@ public class Main {
                                 Object value,
                                 AccessorType accessor) throws Throwable {
             boolean booleanValue =
-                    value instanceof Boolean ? ((Boolean)value).booleanValue() : false;
+                    value instanceof Boolean ? ((Boolean) value).booleanValue() : false;
             setBoolean(methodHandle, valueHolder, booleanValue,
                        resultFor(primitive, PrimitiveType.Boolean, accessor, AccessorType.IPUT));
             setBoolean(methodHandle, booleanValue,
@@ -480,7 +479,7 @@ public class Main {
             getBoolean(methodHandle, booleanValue,
                        resultFor(primitive, PrimitiveType.Boolean, accessor, AccessorType.SGET));
 
-            byte byteValue = value instanceof Byte ? ((Byte)value).byteValue() : (byte)0;
+            byte byteValue = value instanceof Byte ? ((Byte) value).byteValue() : (byte) 0;
             setByte(methodHandle, valueHolder, byteValue,
                     resultFor(primitive, PrimitiveType.Byte, accessor, AccessorType.IPUT));
             setByte(methodHandle, byteValue,
@@ -490,7 +489,7 @@ public class Main {
             getByte(methodHandle, byteValue,
                     resultFor(primitive, PrimitiveType.Byte, accessor, AccessorType.SGET));
 
-            char charValue = value instanceof Character ? ((Character)value).charValue() : 'z';
+            char charValue = value instanceof Character ? ((Character) value).charValue() : 'z';
             setChar(methodHandle, valueHolder, charValue,
                     resultFor(primitive, PrimitiveType.Char, accessor, AccessorType.IPUT));
             setChar(methodHandle, charValue,
@@ -500,7 +499,7 @@ public class Main {
             getChar(methodHandle, charValue,
                     resultFor(primitive, PrimitiveType.Char, accessor, AccessorType.SGET));
 
-            short shortValue = value instanceof Short ? ((Short)value).shortValue() : (short)0;
+            short shortValue = value instanceof Short ? ((Short) value).shortValue() : (short) 0;
             setShort(methodHandle, valueHolder, shortValue,
                      resultFor(primitive, PrimitiveType.Short, accessor, AccessorType.IPUT));
             setShort(methodHandle, shortValue,
@@ -510,7 +509,7 @@ public class Main {
             getShort(methodHandle, shortValue,
                     resultFor(primitive, PrimitiveType.Short, accessor, AccessorType.SGET));
 
-            int intValue = value instanceof Integer ? ((Integer)value).intValue() : -1;
+            int intValue = value instanceof Integer ? ((Integer) value).intValue() : -1;
             setInt(methodHandle, valueHolder, intValue,
                    resultFor(primitive, PrimitiveType.Int, accessor, AccessorType.IPUT));
             setInt(methodHandle, intValue,
@@ -520,7 +519,7 @@ public class Main {
             getInt(methodHandle, intValue,
                    resultFor(primitive, PrimitiveType.Int, accessor, AccessorType.SGET));
 
-            long longValue = value instanceof Long ? ((Long)value).longValue() : (long)-1;
+            long longValue = value instanceof Long ? ((Long) value).longValue() : (long) -1;
             setLong(methodHandle, valueHolder, longValue,
                     resultFor(primitive, PrimitiveType.Long, accessor, AccessorType.IPUT));
             setLong(methodHandle, longValue,
@@ -530,7 +529,7 @@ public class Main {
             getLong(methodHandle, longValue,
                     resultFor(primitive, PrimitiveType.Long, accessor, AccessorType.SGET));
 
-            float floatValue = value instanceof Float ? ((Float)value).floatValue() : -1.0f;
+            float floatValue = value instanceof Float ? ((Float) value).floatValue() : -1.0f;
             setFloat(methodHandle, valueHolder, floatValue,
                     resultFor(primitive, PrimitiveType.Float, accessor, AccessorType.IPUT));
             setFloat(methodHandle, floatValue,
@@ -540,7 +539,7 @@ public class Main {
             getFloat(methodHandle, floatValue,
                      resultFor(primitive, PrimitiveType.Float, accessor, AccessorType.SGET));
 
-            double doubleValue = value instanceof Double ? ((Double)value).doubleValue() : -1.0;
+            double doubleValue = value instanceof Double ? ((Double) value).doubleValue() : -1.0;
             setDouble(methodHandle, valueHolder, doubleValue,
                       resultFor(primitive, PrimitiveType.Double, accessor, AccessorType.IPUT));
             setDouble(methodHandle, doubleValue,
@@ -580,7 +579,7 @@ public class Main {
                 assertTrue(ValueHolder.s_z == b);
             }
 
-            byte [] bytes = { (byte)0x73, (byte)0xfe };
+            byte [] bytes = { (byte) 0x73, (byte) 0xfe };
             for (byte b : bytes) {
                 Byte boxed = new Byte(b);
                 tryAccessor(lookup.findSetter(ValueHolder.class, "m_b", byte.class),
@@ -610,7 +609,7 @@ public class Main {
                 assertTrue(ValueHolder.s_c == c);
             }
 
-            short [] shorts = { (short)0x1234, (short)0x4321 };
+            short [] shorts = { (short) 0x1234, (short) 0x4321 };
             for (short s : shorts) {
                 Short boxed = new Short(s);
                 tryAccessor(lookup.findSetter(ValueHolder.class, "m_s", short.class),
@@ -642,7 +641,7 @@ public class Main {
 
             float [] floats = { 0.99f, -1.23e-17f };
             for (float f : floats) {
-                Float boxed = new Float(f);
+                Float boxed = Float.valueOf(f);
                 tryAccessor(lookup.findSetter(ValueHolder.class, "m_f", float.class),
                             valueHolder, PrimitiveType.Float, boxed, AccessorType.IPUT);
                 tryAccessor(lookup.findGetter(ValueHolder.class, "m_f", float.class),
@@ -657,7 +656,7 @@ public class Main {
 
             double [] doubles = { 0.44444444444e37, -0.555555555e-37 };
             for (double d : doubles) {
-                Double boxed = new Double(d);
+                Double boxed = Double.valueOf(d);
                 tryAccessor(lookup.findSetter(ValueHolder.class, "m_d", double.class),
                             valueHolder, PrimitiveType.Double, boxed, AccessorType.IPUT);
                 tryAccessor(lookup.findGetter(ValueHolder.class, "m_d", double.class),
@@ -712,7 +711,7 @@ public class Main {
             MethodHandles.Lookup lookup = MethodHandles.lookup();
             {
                 MethodHandle mh = lookup.findStaticGetter(ValueHolder.class, "s_fi", int.class);
-                int initialValue = (int)mh.invokeExact();
+                int initialValue = (int) mh.invokeExact();
                 System.out.println(initialValue);
             }
             {
@@ -721,30 +720,30 @@ public class Main {
             }
             try {
                 lookup.findStaticGetter(ValueHolder.class, "s_fi", byte.class);
-                unreachable();
-            } catch (NoSuchFieldException e) {}
+                fail();
+            } catch (NoSuchFieldException expected) {}
             try {
                 lookup.findGetter(ValueHolder.class, "s_fi", byte.class);
-                unreachable();
-            } catch (NoSuchFieldException e) {}
+                fail();
+            } catch (NoSuchFieldException eexpected) {}
             try {
                 lookup.findStaticSetter(ValueHolder.class, "s_fi", int.class);
-                unreachable();
-            } catch (IllegalAccessException e) {}
+                fail();
+            } catch (IllegalAccessException expected) {}
 
             lookup.findGetter(ValueHolder.class, "m_fi", int.class);
             try {
                 lookup.findGetter(ValueHolder.class, "m_fi", byte.class);
-                unreachable();
-            } catch (NoSuchFieldException e) {}
+                fail();
+            } catch (NoSuchFieldException expected) {}
             try {
                 lookup.findStaticGetter(ValueHolder.class, "m_fi", byte.class);
-                unreachable();
-            } catch (NoSuchFieldException e) {}
+                fail();
+            } catch (NoSuchFieldException expected) {}
             try {
                 lookup.findSetter(ValueHolder.class, "m_fi", int.class);
-                unreachable();
-            } catch (IllegalAccessException e) {}
+                fail();
+            } catch (IllegalAccessException expected) {}
 
             System.out.println("Passed MethodHandles.Lookup tests for accessors.");
         }
@@ -755,22 +754,22 @@ public class Main {
             MethodHandles.Lookup lookup = MethodHandles.lookup();
             MethodHandle h0 = lookup.findStaticGetter(ValueHolder.class, "s_fi", int.class);
             h0.invoke();
-            Number t = (Number)h0.invoke();
-            int u = (int)h0.invoke();
-            Integer v = (Integer)h0.invoke();
-            long w = (long)h0.invoke();
+            Number t = (Number) h0.invoke();
+            int u = (int) h0.invoke();
+            Integer v = (Integer) h0.invoke();
+            long w = (long) h0.invoke();
             try {
-                byte x = (byte)h0.invoke();
-                unreachable();
-            } catch (WrongMethodTypeException e) {}
+                byte x = (byte) h0.invoke();
+                fail();
+            } catch (WrongMethodTypeException expected) {}
             try {
-                String y = (String)h0.invoke();
-                unreachable();
-            } catch (WrongMethodTypeException e) {}
+                String y = (String) h0.invoke();
+                fail();
+            } catch (WrongMethodTypeException expected) {}
             try {
-                Long z = (Long)h0.invoke();
-                unreachable();
-            } catch (WrongMethodTypeException e) {}
+                Long z = (Long) h0.invoke();
+                fail();
+            } catch (WrongMethodTypeException expected) {}
         }
 
         private static void testMemberGetter() throws Throwable {
@@ -778,32 +777,32 @@ public class Main {
             MethodHandles.Lookup lookup = MethodHandles.lookup();
             MethodHandle h0 = lookup.findGetter(ValueHolder.class, "m_fi", int.class);
             h0.invoke(valueHolder);
-            Number t = (Number)h0.invoke(valueHolder);
-            int u = (int)h0.invoke(valueHolder);
-            Integer v = (Integer)h0.invoke(valueHolder);
-            long w = (long)h0.invoke(valueHolder);
+            Number t = (Number) h0.invoke(valueHolder);
+            int u = (int) h0.invoke(valueHolder);
+            Integer v = (Integer) h0.invoke(valueHolder);
+            long w = (long) h0.invoke(valueHolder);
             try {
-                byte x = (byte)h0.invoke(valueHolder);
-                unreachable();
-            } catch (WrongMethodTypeException e) {}
+                byte x = (byte) h0.invoke(valueHolder);
+                fail();
+            } catch (WrongMethodTypeException expected) {}
             try {
-                String y = (String)h0.invoke(valueHolder);
-                unreachable();
-            } catch (WrongMethodTypeException e) {}
+                String y = (String) h0.invoke(valueHolder);
+                fail();
+            } catch (WrongMethodTypeException expected) {}
             try {
-                Long z = (Long)h0.invoke(valueHolder);
-                unreachable();
-            } catch (WrongMethodTypeException e) {}
+                Long z = (Long) h0.invoke(valueHolder);
+                fail();
+            } catch (WrongMethodTypeException expected) {}
         }
 
         /*package*/ static Number getDoubleAsNumber() {
-            return new Double(1.4e77);
+            return Double.valueOf(1.4e77);
         }
         /*package*/ static Number getFloatAsNumber() {
-            return new Float(7.77);
+            return Float.valueOf(7.77f);
         }
         /*package*/ static Object getFloatAsObject() {
-            return new Float(-7.77);
+            return Float.valueOf(-7.77f);
         }
 
         private static void testMemberSetter() throws Throwable {
@@ -812,7 +811,7 @@ public class Main {
             MethodHandle h0 = lookup.findSetter(ValueHolder.class, "m_f", float.class);
             MethodHandle s0 = lookup.findSetter(ValueHolder.class, "m_s", short.class);
             h0.invoke(valueHolder, 0.22f);
-            h0.invoke(valueHolder, new Float(1.11f));
+            h0.invoke(valueHolder, Float.valueOf(1.11f));
             Number floatNumber = getFloatAsNumber();
             h0.invoke(valueHolder, floatNumber);
             assertTrue(valueHolder.m_f == floatNumber.floatValue());
@@ -820,17 +819,17 @@ public class Main {
             h0.invoke(valueHolder, objNumber);
             assertTrue(valueHolder.m_f == ((Float) objNumber).floatValue());
             try {
-              h0.invoke(valueHolder, (Float)null);
-              unreachable();
-            } catch (NullPointerException e) {}
+              h0.invoke(valueHolder, (Float) null);
+              fail();
+            } catch (NullPointerException expected) {}
 
             // Test that type conversion checks work on small field types.
-            short temp = (short)s0.invoke(valueHolder, new Byte((byte)45));
+            short temp = (short) s0.invoke(valueHolder, new Byte((byte) 45));
             assertTrue(temp == 0);
             assertTrue(valueHolder.m_s == 45);
 
-            h0.invoke(valueHolder, (byte)1);
-            h0.invoke(valueHolder, (short)2);
+            h0.invoke(valueHolder, (byte) 1);
+            h0.invoke(valueHolder, (short) 2);
             h0.invoke(valueHolder, 3);
             h0.invoke(valueHolder, 4l);
 
@@ -840,32 +839,32 @@ public class Main {
 
             try {
                 h0.invoke(valueHolder, 0.33);
-                unreachable();
-            } catch (WrongMethodTypeException e) {}
+                fail();
+            } catch (WrongMethodTypeException expected) {}
             try {
                 Number doubleNumber = getDoubleAsNumber();
                 h0.invoke(valueHolder, doubleNumber);
-                unreachable();
-            } catch (ClassCastException e) {}
+                fail();
+            } catch (ClassCastException expected) {}
             try {
                 Number doubleNumber = null;
                 h0.invoke(valueHolder, doubleNumber);
-                unreachable();
-            } catch (NullPointerException e) {}
+                fail();
+            } catch (NullPointerException expected) {}
             {
                 // Mismatched return type - float != void
-                float tmp = (float)h0.invoke(valueHolder, 0.45f);
+                float tmp = (float) h0.invoke(valueHolder, 0.45f);
                 assertTrue(tmp == 0.0);
             }
             try {
                 h0.invoke(valueHolder, "bam");
-                unreachable();
-            } catch (WrongMethodTypeException e) {}
+                fail();
+            } catch (WrongMethodTypeException expected) {}
             try {
                 String s = null;
                 h0.invoke(valueHolder, s);
-                unreachable();
-            } catch (WrongMethodTypeException e) {}
+                fail();
+            } catch (WrongMethodTypeException expected) {}
         }
 
         private static void testStaticSetter() throws Throwable {
@@ -873,23 +872,23 @@ public class Main {
             MethodHandle s0 = lookup.findStaticSetter(ValueHolder.class, "s_s", short.class);
             MethodHandle h0 = lookup.findStaticSetter(ValueHolder.class, "s_f", float.class);
             h0.invoke(0.22f);
-            h0.invoke(new Float(1.11f));
-            Number floatNumber = new Float(0.88f);
+            h0.invoke(Float.valueOf(1.11f));
+            Number floatNumber = Float.valueOf(0.88f);
             h0.invoke(floatNumber);
             assertTrue(ValueHolder.s_f == floatNumber.floatValue());
 
             try {
-              h0.invoke((Float)null);
-              unreachable();
-            } catch (NullPointerException e) {}
+              h0.invoke((Float) null);
+              fail();
+            } catch (NullPointerException expected) {}
 
             // Test that type conversion checks work on small field types.
-            short temp = (short)s0.invoke(new Byte((byte)45));
+            short temp = (short) s0.invoke(new Byte((byte) 45));
             assertTrue(temp == 0);
             assertTrue(ValueHolder.s_s == 45);
 
-            h0.invoke((byte)1);
-            h0.invoke((short)2);
+            h0.invoke((byte) 1);
+            h0.invoke((short) 2);
             h0.invoke(3);
             h0.invoke(4l);
 
@@ -899,33 +898,33 @@ public class Main {
 
             try {
                 h0.invoke(0.33);
-                unreachable();
-            } catch (WrongMethodTypeException e) {}
+                fail();
+            } catch (WrongMethodTypeException expected) {}
             try {
                 Number doubleNumber = getDoubleAsNumber();
                 h0.invoke(doubleNumber);
-                unreachable();
-            } catch (ClassCastException e) {}
+                fail();
+            } catch (ClassCastException expected) {}
             try {
-                Number doubleNumber = new Double(1.01);
+                Number doubleNumber = Double.valueOf(1.01);
                 doubleNumber = (doubleNumber.doubleValue() != 0.1) ? null : doubleNumber;
                 h0.invoke(doubleNumber);
-                unreachable();
-            } catch (NullPointerException e) {}
+                fail();
+            } catch (NullPointerException expected) {}
             try {
                 // Mismatched return type - float != void
-                float tmp = (float)h0.invoke(0.45f);
+                float tmp = (float) h0.invoke(0.45f);
                 assertTrue(tmp == 0.0);
-            } catch (Exception e) { unreachable(); }
+            } catch (Exception e) { fail(); }
             try {
                 h0.invoke("bam");
-                unreachable();
-            } catch (WrongMethodTypeException e) {}
+                fail();
+            } catch (WrongMethodTypeException expected) {}
             try {
                 String s = null;
                 h0.invoke(s);
-                unreachable();
-            } catch (WrongMethodTypeException e) {}
+                fail();
+            } catch (WrongMethodTypeException expected) {}
         }
 
         public static void main() throws Throwable{
@@ -944,32 +943,32 @@ public class Main {
                 // public field test
                 Field f = ValueHolder.class.getDeclaredField("m_c");
                 MethodHandles.lookup().unreflectSetter(f).invokeExact(v, 'z');
-                assertEquals((char)MethodHandles.lookup().unreflectGetter(f).invokeExact(v), 'z');
+                assertEquals('z', (char) MethodHandles.lookup().unreflectGetter(f).invokeExact(v));
                 MethodHandles.lookup().unreflectSetter(f).invokeExact(v, 'A');
-                assertEquals((char)MethodHandles.lookup().unreflectGetter(f).invokeExact(v), 'A');
+                assertEquals('A', (char) MethodHandles.lookup().unreflectGetter(f).invokeExact(v));
             }
             {
                 // public static final field test
                 Field f = ValueHolder.class.getDeclaredField("s_fi");
                 try {
                     MethodHandles.lookup().unreflectSetter(f);
-                    unreachable();
-                } catch (IllegalAccessException e) {}
+                    fail();
+                } catch (IllegalAccessException expected) {}
                 MethodHandles.lookup().unreflectGetter(f);
                 f.setAccessible(true);
                 int savedValue = (int) MethodHandles.lookup().unreflectGetter(f).invokeExact();
                 int newValue = savedValue + 1;
                 MethodHandles.lookup().unreflectSetter(f).invokeExact(newValue);
-                assertEquals((int)MethodHandles.lookup().unreflectGetter(f).invokeExact(),
-                             newValue);
+                assertEquals(newValue, (int) MethodHandles.lookup().unreflectGetter(f).invokeExact()
+                );
                 MethodHandles.lookup().unreflectSetter(f).invokeExact(savedValue);
-                assertEquals((int)MethodHandles.lookup().unreflectGetter(f).invokeExact(),
-                             savedValue);
+                assertEquals(savedValue, (int) MethodHandles.lookup().unreflectGetter(f).invokeExact()
+                );
                 f.setAccessible(false);
                 try {
                     MethodHandles.lookup().unreflectSetter(f);
-                    unreachable();
-                } catch (IllegalAccessException e) {}
+                    fail();
+                } catch (IllegalAccessException expected) {}
                 MethodHandles.lookup().unreflectGetter(f);
             }
             {
@@ -977,57 +976,57 @@ public class Main {
                 Field f = ValueHolder.class.getDeclaredField("m_pz");
                 try {
                     MethodHandle mh = MethodHandles.lookup().unreflectSetter(f);
-                    unreachable();
-                } catch (IllegalAccessException e) {}
+                    fail();
+                } catch (IllegalAccessException expected) {}
                 try {
                     MethodHandle mh = MethodHandles.lookup().unreflectGetter(f);
-                    unreachable();
-                } catch (IllegalAccessException e) {}
+                    fail();
+                } catch (IllegalAccessException expected) {}
                 f.setAccessible(true);
                 MethodHandles.lookup().unreflectSetter(f).invokeExact(v, true);
-                assertEquals((boolean)MethodHandles.lookup().unreflectGetter(f).invokeExact(v),
-                            true);
+                assertEquals(true, (boolean) MethodHandles.lookup().unreflectGetter(f).invokeExact(v)
+                );
                 MethodHandles.lookup().unreflectSetter(f).invokeExact(v, false);
-                assertEquals((boolean)MethodHandles.lookup().unreflectGetter(f).invokeExact(v),
-                            false);
+                assertEquals(false, (boolean) MethodHandles.lookup().unreflectGetter(f).invokeExact(v)
+                );
                 f.setAccessible(false);
                 try {
                     MethodHandle mh = MethodHandles.lookup().unreflectGetter(f);
-                    unreachable();
-                } catch (IllegalAccessException e) {}
+                    fail();
+                } catch (IllegalAccessException expected) {}
                 try {
                     MethodHandle mh = MethodHandles.lookup().unreflectSetter(f);
-                    unreachable();
-                } catch (IllegalAccessException e) {}
+                    fail();
+                } catch (IllegalAccessException expected) {}
             }
             {
                 // private static final field test
                 Field f = ValueHolder.class.getDeclaredField("s_fz");  // private static final field
                 try {
                     MethodHandles.lookup().unreflectSetter(f);
-                    unreachable();
-                } catch (IllegalAccessException e) {}
+                    fail();
+                } catch (IllegalAccessException expected) {}
                 try {
                     MethodHandles.lookup().unreflectGetter(f);
-                    unreachable();
-                } catch (IllegalAccessException e) {}
+                    fail();
+                } catch (IllegalAccessException expected) {}
                 f.setAccessible(true);
                 // Setter is okay despite being final because field isAccessible().
                 MethodHandles.lookup().unreflectSetter(f).invokeExact(false);
-                assertEquals((boolean)MethodHandles.lookup().unreflectGetter(f).invokeExact(),
-                            false);
+                assertEquals(false, (boolean) MethodHandles.lookup().unreflectGetter(f).invokeExact()
+                );
                 MethodHandles.lookup().unreflectSetter(f).invokeExact(true);
-                assertEquals((boolean)MethodHandles.lookup().unreflectGetter(f).invokeExact(),
-                            true);
+                assertEquals(true, (boolean) MethodHandles.lookup().unreflectGetter(f).invokeExact()
+                );
                 f.setAccessible(false);
                 try {
                     MethodHandles.lookup().unreflectSetter(f);
-                    unreachable();
-                } catch (IllegalAccessException e) {}
+                    fail();
+                } catch (IllegalAccessException expected) {}
                 try {
                     MethodHandles.lookup().unreflectGetter(f);
-                    unreachable();
-                } catch (IllegalAccessException e) {}
+                    fail();
+                } catch (IllegalAccessException expected) {}
             }
             System.out.println("Passed MethodHandles.unreflect(Field) tests.");
         }
